[package]
name = "emailnator-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.23", default-features = false, features = ["cookies", "gzip", "http2", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
sonic-rs = "0.5.5"
thiserror = "2.0.17"
urlencoding = "2.1.3"

[lints.clippy]
collection_is_never_read = "deny"
equatable_if_let = "deny"
iter_on_single_items = "deny"
missing_const_for_fn = "deny"
needless_collect = "deny"
needless_pass_by_ref_mut = "deny"
redundant_clone = "deny"
redundant_pub_crate = "deny"
single_option_map = "deny"
too_long_first_doc_paragraph = "deny"
trivial_regex = "deny"
unnecessary_struct_initialization = "deny"
use_self = "deny"
